# rwa-projects

./: .gitignore
p1-spl-token/: Anchor.toml  README.md  package.json
p1-spl-token/programs/p1-spl-token/: Cargo.toml
p1-spl-token/programs/p1-spl-token/src/: lib.rs
p1-spl-token/tests/: p1-spl-token.ts
p2-kyc-token/: Anchor.toml  README.md  package.json
p2-kyc-token/programs/p2-kyc-token/: Cargo.toml
p2-kyc-token/programs/p2-kyc-token/src/: lib.rs
p2-kyc-token/tests/: p2-kyc-token.ts
p3-transfer-hook/: Anchor.toml  README.md  package.json
p3-transfer-hook/programs/p3-transfer-hook/: Cargo.toml
p3-transfer-hook/programs/p3-transfer-hook/src/: lib.rs
p3-transfer-hook/tests/: p3-transfer-hook.ts
p3b-permanent-delegate/: Anchor.toml  README.md  package.json
p3b-permanent-delegate/programs/p3b-permanent-delegate/: Cargo.toml
p3b-permanent-delegate/programs/p3b-permanent-delegate/src/: lib.rs
p3b-permanent-delegate/tests/: p3b-permanent-delegate.ts
p4-pyth-oracle/: Anchor.toml  README.md  package.json
p4-pyth-oracle/programs/p4-pyth-oracle/: Cargo.toml
p4-pyth-oracle/programs/p4-pyth-oracle/src/: lib.rs
p4-pyth-oracle/tests/: p4-pyth-oracle.ts
p5a-treasury-fund/: Anchor.toml  README.md  package.json
p5a-treasury-fund/programs/p5a-treasury-fund/: Cargo.toml
p5a-treasury-fund/programs/p5a-treasury-fund/src/: lib.rs
p5a-treasury-fund/tests/: p5a-treasury-fund.ts
p5b-treasury-oracle/: Anchor.toml  README.md  package.json
p5b-treasury-oracle/programs/p5b-treasury-oracle/: Cargo.toml
p5b-treasury-oracle/programs/p5b-treasury-oracle/src/: lib.rs
p5b-treasury-oracle/tests/: p5b-treasury-oracle.ts
p6a-tokenized-stock/: Anchor.toml  README.md  package.json
p6a-tokenized-stock/programs/p6a-tokenized-stock/: Cargo.toml
p6a-tokenized-stock/programs/p6a-tokenized-stock/src/: lib.rs
p6a-tokenized-stock/tests/: p6a-tokenized-stock.ts
p6b-mini-amm/: Anchor.toml  README.md  package.json
p6b-mini-amm/programs/p6b-mini-amm/: Cargo.toml
p6b-mini-amm/programs/p6b-mini-amm/src/: lib.rs
p6b-mini-amm/tests/: p6b-mini-amm.ts
p7-compliant-rwa/: Anchor.toml  README.md  package.json
p7-compliant-rwa/programs/p7-compliant-rwa/: Cargo.toml
p7-compliant-rwa/programs/p7-compliant-rwa/src/: lib.rs
p7-compliant-rwa/tests/: p7-compliant-rwa.ts
