[package]
name = "p1-spl-token"
version = "0.1.0"
description = "P1 — bare SPL token mint + transfer (RWA study plan)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p1_spl_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# `init-if-needed` is required because our accounts structs use init_if_needed.
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"
