[package]
name = "p3b-permanent-delegate"
version = "0.1.0"
description = "P3b — Permanent Delegate clawback via Token-2022 (RWA study plan)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p3b_permanent_delegate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token_2022_extensions"] }
