[package]
name = "p6a-tokenized-stock"
version = "0.1.0"
description = "P6a — Tokenized stock issuance, oracle-priced (RWA study plan)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p6a_tokenized_stock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token_2022_extensions"] }

# Version-sensitive: pyth-solana-receiver-sdk must agree with the solana-program
# anchor pulls in (same as P4/P5b). Paste me any first-build version error.
pyth-solana-receiver-sdk = "0.6.1"
