[package]
name = "p7-compliant-rwa"
version = "0.1.0"
description = "P7 — Capstone: full compliant RWA token (KYC + yield + oracle + clawback)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p7_compliant_rwa"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token_2022_extensions"] }

# Version-sensitive: pyth-solana-receiver-sdk must agree with the solana-program
# anchor pulls in (same as P4/P5b/P6a). Paste me any first-build version error.
pyth-solana-receiver-sdk = "0.6.1"
